--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.5.1",
-    "react": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
-    "@google/genai": "latest",
+    "@google/genai": "^1.32.0",
     "jspdf": "latest",
-    "jspdf-autotable": "latest"
+    "jspdf-autotable": "latest",
+    "lucide-react": "^0.556.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
