--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jspdf": "latest",
     "jspdf-autotable": "latest",
     "lucide-react": "^0.556.0",
+    "marked": "^17.0.1",
+    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "recharts": "^3.5.1"
